--- a/menubar/index.html
+++ b/menubar/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html><html>
-<head><title>Nothing page</title>
+<head><title>Google</title>
 <link rel="stylesheet" href="menustyle.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
 </head>
 <body>
     <div class="menubar" >
         <ul><li class="active" ><a href="#"><i class="fa fa-home" ></i>Home</a></li>
-          <li><a href="#"><i class="fa fa-address-book"></i></i>About us</a></li>
-          <li><a href="#"><i class="fa fa-users"></i>Team Work</a></li>
-          <li><a href="#"><i class="fa fa-television"></i>Wallpaper</a></li>
-          <li><a href="#"><i class="fa fa-home" ></i>Feedback</a></li>
-          <li><a href="#"><i class="fa fa-home" ></i>Contact us</a></li>
-          <li><a href="#"><i class="fa fa-home" ></i>About us</a></li>
-          <li><a href="#"><i class="fa fa-home" ></i>Blog</a></li>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Team Work</a></li>
+          <li><a href="#"></i>Wallpaper</a></li>
+          <li><a href="#"></i>Feedback</a></li>
+          <li><a href="#"></i>Contact us</a></li>
+          <li><a href="#"></i>About us</a></li>
+          <li><a href="#"></i>Blog</a></li>
         </ul>
         </div>
     
